--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # Ignore bundler config.
 /.bundle
+coverage
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -17,3 +18,5 @@
 /yarn-error.log
 
 .byebug_history
+
+.DS_Store
